# cardbox

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/_ci_/cardbox_target/: command.json  generate_json.rs  get_command.rb
.github/_ci_/cardbox_target/input/: build.json  build.jsonc  build.rb  build.schema.json  build.toml
.github/workflows/: build_cardbox_target.yml
crates/cardbox/: Cargo.toml  build.rs  tmp.xx
crates/cardbox-target/: Cargo.toml  Readme.md  build.rs
crates/cardbox-target/src/: lib.rs  main.rs
crates/cardbox/src/: consts.rs  fs.rs  imp_std.rs  lib copy.rs  lib.rs  no_std.rs  path.rs  run_cmd.rs  utils.rs
crates/cardbox/src/copy/: error.rs  file.rs  mod.rs
crates/cardbox/src/fs/: link.rs  mod.rs
crates/cardbox/src/imp_std/: common.rs  copy.rs  fs.rs  path.rs
crates/cardbox/src/imp_std/copy/: copy_file.rs  error.rs  extra.rs  file.rs  mod.rs
crates/cardbox/src/list/: mod.rs  octal.rs  offset_time.rs
crates/cardbox/src/no_std/: cat.rs  chmod.rs  cli.rs  commands.rs  common.rs  consts.rs  copy.rs  fs.rs  link.rs  list.rs  mkdir.rs  mod.rs
crates/cli/: Cargo.toml  build.rs  tmp.json
crates/cli/src/: commands.rs  copy.rs  link_hard.rs  link_sym.rs  list.rs  main.rs  rename.rs  run_cmd.rs  target_info.rs
crates/cli/src/copy/: copy_all.rs  copy_file.rs  mod.rs
docs/: Readme.md
src/: lib.rs
tests/: doc.rs  mod.rs  pub.rs
tests/cardbox_target/: build_on_debian.rs  linux_musl.rs  mod.rs  zig.rs
