[package]
name = "tests"
edition.workspace = true

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Moe <m@tmoe.me>"]
# version = "0.0.0-alpha.0"
edition = "2024"
rust-version = "1.88"
readme = "docs/Readme.md"
repository = "https://github.com/2moe/cardbox"
license = "Apache-2.0"
keywords = ["busybox", "cli", "coreutils", "utility"]
categories = ["command-line-utilities"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
argh = "0.1.14"
cardbox = { path = "crates/cardbox" }
compact_str = { version = "0.9", default-features = false }
fs_extra = "1.3.0"
libc = { version = "0.2.182", default-features = false }
log = "0.4.29"
rayon = "1.11.0"
rustix = { version = "1.1", default-features = false }
serde = { version = "1.0.228", default-features = false, features = [
  "alloc",
  "derive"
] }
serde_json = "1.0.149"
serde_with = { version = "3.18.0", default-features = false, features = [
  "alloc",
  "macros"
] }
tap = "1.0"
# path = "../testutils"
testutils = { version = "0.0.12", default-features = false }
time = { version = "0.3", default-features = false }
tinystr = "0.8.2"

# Linux
syscalls = { version = "0.8.1", default-features = false }

# Unix like
# libc-print = "0.1.23"

# musl Linux
# mimalloc = "0.1.48"

# Windows
windows-sys = { version = "0.61.2", default-features = false }

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(rust_analyzer)"]

[dependencies]
time.workspace = true

[dev-dependencies]
anyhow.workspace = true
cardbox-target = { path = "./crates/cardbox-target" }
testutils = { workspace = true, default-features = true }

[profile.release]
panic = "abort"

[profile.fat]
inherits = "release"
opt-level = "z"
strip = true
lto = "fat"
panic = "abort"
# codegen-units = 1

[profile.thin]
inherits = "release"
opt-level = "s"
strip = true
lto = "thin"
panic = "abort"
