[package]
name = "cardbox-target"
version = "0.0.1-beta.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Display the target platform."
readme = "Readme.md"
repository.workspace = true
license.workspace = true
keywords = ["no-std-cli"]
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
testutils = { workspace = true, features = [
  "const_str",
  "re_exports_tap",
  "std",
] }

# [target.'cfg(not(any(windows, target_os = "wasi")))'.dependencies]
[target.'cfg(all(not(windows), not(target_os = "wasi")))'.dependencies]
libc.workspace = true

[target.'cfg(all(target_os = "linux", any(target_arch = "aarch64", target_arch = "arm", target_arch = "riscv64", target_arch = "x86_64")))'.dependencies]
rustix = { workspace = true, features = ["stdio"] }
syscalls.workspace = true

[target.'cfg(target_os = "wasi")'.dependencies]
rustix = { workspace = true, features = ["stdio"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_IO",
  # "Win32_Foundation",
  "Win32_System_Threading",
] }

[lints]
workspace = true
