[package]
name = "cardbox"
# version.workspace = true
version = "0.0.1-alpha.1"
authors.workspace = true
# readme = "./docs/Readme.md"
edition.workspace = true
license.workspace = true
keywords = ["busybox", "coreutils", "utility"]
# keywords.workspace = true
# categories.workspace = true
categories = ["os"]

rust-version.workspace = true
description = "A modern, modular, and cross-platform implementation of core system utilities."
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
fs_extra = { workspace = true, optional = true }
# log = { workspace = true, optional = true }
tap.workspace = true

[build-dependencies]
# compact_str.workspace = true
testutils = { workspace = true, features = [
  "const_str",
  "re_exports_tap",
  "std",
] }

[target.'cfg(not(windows))'.dependencies]
rustix = { workspace = true, features = ["alloc", "stdio"], optional = true }
# libc-print.workspace = true

[features]
default = []
# ===
copy_all = ["dep:fs_extra"]
uts_name = ["rustix/system"]
