[package]
name = "cardbox"
# version.workspace = true
version = "0.0.1-alpha.1"
authors.workspace = true
# readme = "./docs/Readme.md"
edition.workspace = true
license.workspace = true
keywords = ["busybox", "coreutils", "utility"]
# keywords.workspace = true
# categories.workspace = true
categories = ["os"]

rust-version.workspace = true
description = "A modern, modular, and cross-platform implementation of core system utilities."
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
compact_str = { workspace = true, optional = true }
fs_extra = { workspace = true, optional = true }
serde = { workspace = true, features = ["std"], optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
# log = { workspace = true, optional = true }
tap.workspace = true
time = { workspace = true, features = ["formatting", "local-offset", "std"], optional = true }
tinystr = { workspace = true, features = ["serde"], optional = true }

[build-dependencies]
testutils = { workspace = true, features = [
  "const_str",
  "re_exports_tap",
  "std",
] }

[target.'cfg(not(windows))'.dependencies]
rustix = { workspace = true, features = ["alloc", "stdio"], optional = true }
# libc-print.workspace = true

[features]
default = []
copy_all = ["dep:fs_extra"]
list = [
  "compact_str/serde",
  "dep:time",
  "dep:tinystr",
  "serde",
]
serde = ["dep:serde", "dep:serde_json", "dep:serde_with"]
uts_name = ["rustix/system"]
