[package]
name = "cardbox"
# version.workspace = true
version = "0.0.1-alpha.1"
authors.workspace = true
# readme = "./docs/Readme.md"
edition.workspace = true
license.workspace = true
keywords = ["busybox", "coreutils", "utility"]
# keywords.workspace = true
# categories.workspace = true
categories = ["os"]

rust-version.workspace = true
description = "A modern, modular, and cross-platform implementation of core system utilities."
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
ahash = { workspace = true, optional = true }
compact_str = { workspace = true, optional = true }
fs_extra = { workspace = true, optional = true }
json5 = { workspace = true, optional = true }
serde = { workspace = true, features = ["std"], optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
# log = { workspace = true, optional = true }
tap.workspace = true
time = { workspace = true, features = ["formatting", "local-offset", "std"], optional = true }
tinystr = { workspace = true, features = ["serde"], optional = true }
tinyvec = { workspace = true, optional = true }

[build-dependencies]
testutils = { workspace = true, features = [
  "const_str",
  "re_exports_tap",
  "std",
] }

[target.'cfg(not(windows))'.dependencies]
rustix = { workspace = true, features = ["alloc", "stdio"], optional = true }
# libc-print.workspace = true

[features]
default = []
copy_all = ["dep:fs_extra"]
link = []
list = [
  "dep:compact_str",
  "dep:time",
  "dep:tinystr",
  "serde",
]
run_cmd = [  #
  "dep:ahash",
  "dep:compact_str",
  "dep:tinyvec",
  "json5",
  "serde"
]
serde = [
  "ahash?/serde",
  "compact_str?/serde",
  "dep:serde",
  "dep:serde_json",
  "dep:serde_with",
  "tinyvec?/serde"
]
uts_name = ["rustix/system"]
