[package]
name = "cardbox-cli"
version = "0.0.0"
authors.workspace = true
# readme = "./docs/Readme.md"
edition.workspace = true
license.workspace = true
# keywords.workspace = true
# categories = ["os"]
categories.workspace = true

repository.workspace = true
rust-version.workspace = true
description = "CLI utilities purpose-built for scratch container environments."

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde = ["dep:serde_json"]
argh = ["dep:argh"]
compact_str = ["dep:compact_str"]
# ===
target = ["cardbox/uts_name"]
copy-file = []
copy-all = ["cardbox/copy_all"]
list = ["cardbox/list", "serde"]
rename = []
run-command = []
# cat = []
# hardlink = []
# symlink = []
# mkdir = []
# chmod = []

[dependencies]
tap.workspace = true
cardbox = { workspace = true, features = ["std"] }
argh = { workspace = true, optional = true }
compact_str = { workspace = true, features = ["serde"], optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
time = { workspace = true, features = ["formatting"] }
serde_json.workspace = true
testutils = { workspace = true, features = [
  "const_str",
  "os_cmd",
  "re_exports_tap",
] }
